# madara

./: .all-contributorsrc  .codecov.yml  .codespellignore  .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .markdownlint.json  .prettierignore  .tarpaulin.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  autodoc.config.json  benchmark.yml  block.json  build-log.txt  contract_class_output.txt  crates.js  erc20.json  flake.nix  help.html  index.html  makefile  multi-node-local-test-docker-compose.yml  output.txt  package-lock.json  package.json  raw.json  rpc_diff.sh  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  sharingan_testnet_deployment_guide.md  shell.nix  source-files.js  (+3 more)
cairo-contracts/: .env.example  .gitignore  README.md  pyproject.toml
cairo-contracts/scripts/: compile_all.py  compile_all_cairo1.sh  compile_all_contracts.sh  deploy_erc20.py
cairo-contracts/src/: ERC20.cairo  ERC721.cairo  counter.cairo
cairo-contracts/src/accounts/: program.json  program2.json
cairo-contracts/src/cairo_1/: InfiniteLoop.cairo
cairo-contracts/src/erc20/: erc20.cairo  library.cairo
cairo-contracts/src/proxy/: Proxy.cairo  library.cairo
cairo-contracts/src/test_contracts/: emit_multiple_events_across_contracts.cairo  emit_single_event.cairo  l1_handler.cairo  send_message.cairo  test.cairo
cairo-contracts/utils/: constants.py  starknet.py
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/: lib.rs
client/rpc/src/: lib.rs
crates/client/block-proposer/: Cargo.toml
crates/client/commitment-state-diff/: Cargo.toml
crates/client/contract-class-data/: Cargo.toml
crates/client/data-availability/: Cargo.toml
crates/client/db/: Cargo.toml
crates/client/deoxys/: Cargo.toml
crates/client/eth-client/: Cargo.toml
crates/client/genesis-data-provider/: Cargo.toml
crates/client/l1-gas-price/: Cargo.toml
crates/client/l1-messages/: Cargo.toml
crates/node/: Cargo.toml  build.rs
crates/node/chain-specs/: madara-local-cfg2-raw.json  madara-local-cfg2.json  testnet-rinnegan-raw.json  testnet-sharingan-raw.json
crates/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  configs.rs  constants.rs  genesis_block.rs  import_queue.rs  madara_simnode.rs  main.rs  rpc.rs  service.rs  starknet.rs  starknet_block_import.rs  tests.rs  utils.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: api.rs  error.rs  lib.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/resources/: versioned_constants.json
crates/runtime/src/: config.rs  lib.rs  opaque.rs  pallets.rs  runtime_tests.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: constants.rs  lib.rs
da-test/: Cargo.toml  state_diffs.rs
da-test/contracts/Counter0/: Counter0.cairo
da-test/contracts/Counter1/: Counter1.sierra.json
da-test/contracts/Counter3/: Counter3.cairo
da-test/src/: constants.rs  fixtures.rs  lib.rs  utils.rs
integration-tests/: Cargo.toml
integration-tests/src/: codegen.rs  lib.rs  madara.rs
integration-tests/src/codegen/: madara.rs
madara-test-runner/: Cargo.toml  README.md
madara-test-runner/src/: client.rs  lib.rs  node.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/cairo/: Cargo.toml  README.md
pallets/cairo-execution-engine/: Cargo.toml  README.md
pallets/cairo-execution-engine/src/: lib.rs  types.rs
pallets/cairo/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/starknet/: Cargo.toml
pallets/starknet/src/: benchmarking.rs  lib.rs  mock.rs  state_root.rs  tests.rs  transaction_validation.rs  types.rs
primitives/starknet/: Cargo.toml
primitives/starknet/src/: lib.rs
primitives/starknet/tests/: crypto.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
starknet-e2e-test/: Cargo.toml  README.md  ethereum_core_contract.rs  ethereum_e2e.rs  ethereum_e2e_settlement.rs  ethereum_settlement.rs
starknet-e2e-test/contracts/: Makefile  README.md  erc20.casm.json  erc20.sierra.json  foundry.toml  legacy_token_bridge.json  token_bridge.casm.json  token_bridge.sierra.json
starknet-e2e-test/contracts/artifacts/: Starknet.json  UnsafeProxy.json
starknet-e2e-test/contracts/src/: UnsafeProxy.sol
starknet-e2e-test/src/: eth_bridge.rs  ethereum_sandbox.rs  lib.rs  starknet_contract.rs  starknet_sovereign.rs  token_bridge.rs  utils.rs
starknet-rpc-test/: Cargo.toml  README.md  add_declare_transaction.rs  add_declare_transaction_v0.rs  add_deploy_account_transaction.rs  add_invoke_transaction.rs  argent_account.rs  call.rs  chain_id.rs  declareV0.rs  estimate_fee.rs  estimate_message_fee.rs  get_block_hash_and_number.rs  get_block_number.rs  get_block_transaction_count.rs  get_block_with_tx_hashes.rs  get_block_with_txs.rs  get_class.rs  get_class_at.rs  get_class_hash_at.rs  get_events.rs  get_nonce.rs  get_state_update.rs  get_storage_at.rs  get_transaction_by_blockid_and_index.rs  get_transaction_by_hash.rs  get_transaction_receipt.rs  get_transaction_status.rs  l1_nonce_unused.rs  pending_transactions.rs  predeployed_accounts.rs  simulate_transaction.rs  spec_version.rs  tmp.txt  trace_block.rs  trace_transaction.rs
starknet-rpc-test/contracts/: Counter.cairo  Counter.casm.json  Counter.sierra.json  counter.cairo  generate_declare_contracts.sh  proxy.json
starknet-rpc-test/contracts/Counter0/: Counter0.cairo  Counter0.casm.json  Counter0.sierra.json
starknet-rpc-test/contracts/Counter1/: Counter1.cairo  Counter1.casm.json  Counter1.sierra.json
starknet-rpc-test/contracts/Counter2/: Counter2.cairo  Counter2.casm.json  Counter2.sierra.json
starknet-rpc-test/contracts/Counter3/: Counter3.cairo  Counter3.casm.json  Counter3.sierra.json
starknet-rpc-test/contracts/Counter4/: Counter4.cairo  Counter4.casm.json  Counter4.sierra.json
starknet-rpc-test/contracts/Counter5/: Counter5.cairo  Counter5.casm.json  (+1 more)
starknet-rpc-test/src/: constants.rs  fixtures.rs  lib.rs  utils.rs
starknet-test-utils/: Cargo.toml
starknet-test-utils/src/: constants.rs  fixtures.rs  lib.rs  utils.rs
(+3684 files in other folders)
